@@ -10,6 +10,7 @@ Stable versions
 	Other changes:
 	- fix IT random volume variation
 	- fix pattern initialization sanity check
+	- fix ++ pattern handling in IT loader (reported by honguito98)
 
 4.3.6 (20150322):
 	Fix bugs caught in the OpenMPT test cases:
